--- a/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
@@ -551,7 +551,7 @@
 
                                                       <td width="24">&nbsp;</td>
                                                       <td width="44">AMEX</td>
-						      <td width="100"><input type="checkbox" name="amex00"></td>                                   
+						      <td width="100"><input type="checkbox" id="amex00" name="amex00"></td>                                   
                                                     </tr>
                                                     <tr>
                                                       <td width="90">Metodo&nbsp;de&nbsp;pago</td>
@@ -562,7 +562,7 @@
 
                                                       <td width="24">&nbsp;</td>
                                                       <td width="44">AMEX</td>
-						      <td width="100"><input type="checkbox" name="amex01"></td>                                                                  
+						      <td width="100"><input type="checkbox"  id="amex01" name="amex01"></td>                                                                  
                                                     </tr>
                                                     <tr>
                                                       <td width="90">Metodo&nbsp;de&nbsp;pago</td>
@@ -573,7 +573,7 @@
 
                                                       <td width="24">&nbsp;</td>
                                                       <td width="44">AMEX</td>
-						      <td width="100"><input type="checkbox" name="amex02"></td>                                                                  
+						      <td width="100"><input type="checkbox"  id="amex02" name="amex02"></td>                                                                  
                                                     </tr>
                                                     </table>
                                                     </div>
