Cambios:    - Reporte de Caja (Reporte de Pedidos con información de los pagos que se hicieron).    - Cambio al Catalogo de Clientes uso del campo clave_comercial como nombre de paciente.    - Cambio en Pedidos (Remisiones) en el buscador de clientes agregando el key de Cliente/Paciente (clave_comercial).
Bug corregidos:
  - Resueltos cambios con tecla enter , relacionados a campo precio unitario y campos de cantidad.

Signed-off-by: Gerardo Araujo <gerardo@debian.agnux.local>

--- a/erp-quimicos/src/main/webapp/vm/clients/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/clients/startup.vm
@@ -175,9 +175,10 @@
 												<td colspan="7"><INPUT TYPE="text" name="razonsocial" style="width:410px;"></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_razonsocial"></div></td>
 												<td width="5"></td>
-												<td>Clave&nbsp;Comercial</td>
+                                                                                                <td>Paciente</td>
+										<!--GMAS11102017<td>Clave&nbsp;Comercial</td> -->
 												<td width="5"></td>
-												<td><INPUT TYPE="text" name="clave_comercial" style="width:150px;"></td>
+                                                                                                <td><INPUT TYPE="text" name="clave_comercial" style="width:150px;"></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_clavecomercial"></div></td>
 											</tr>
 											<tr>
@@ -295,7 +296,7 @@
 												<td width="150"><INPUT TYPE="text" name="ext2" style="width:150px;"></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_ext2"></div></td>
 												<td width="5"></td>
-												<td width="75">Agente</td>
+												<td width="75">M&eacute;dico</td>
 												<td width="5"></td>
 												<td width="150"><SELECT NAME="agente" style="width:150px"></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_agente"></div></td>
