--- a/erp-quimicos/src/main/webapp/vm/facglobal2/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/facglobal2/startup.vm
@@ -20,7 +20,7 @@
         <input type="hidden" name="user" value="$username">
         <input type="hidden" name="iu" value="$iu">
         <input type="hidden" name="emp" value="$empresa">
-		<input type="hidden" name="suc" value="$sucursal">
+	<input type="hidden" name="suc" value="$sucursal">
 		
         <!--  otra parte -->
         <table class="acciones">
@@ -37,25 +37,19 @@
 						</tr>
 						<tr>
 							<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-						<!--	<td width="100">Opciones</td> -->
 							<td width="20"></td>
 							<td width="150"></td>     
 							<td width="30"></td>                       
 							
-							<td width="10">&nbsp;&nbsp;&nbsp;</td>
-							<td></td>
 						</tr>
 						
 						<tr>
 							<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
                                                         
-						<!--	<td width="130"><SELECT NAME="opciones" style="width:130px;" title="Filtros para el reporte de pedidos"></SELECT></td> -->
 							<td width="20"></td>
 
 							
-							<td width="100"><INPUT TYPE="button"  value="Facturar" style="width:60px;" ></td>
-							<td>&nbsp;&nbsp;</td>
-							<td width="100"><INPUT TYPE="button"  value="  Salir  " style="width:60px;" ></td>
+							<td width="100"><INPUT TYPE="button" name="facturar" value="Facturar" style="width:60px;" ></td>
 						</tr>						
 					</table>
                 </td>
