--- a/erp-quimicos/src/main/webapp/vm/notascredito/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/notascredito/startup.vm
@@ -387,7 +387,13 @@
 															<td width="60"  style="font-weight: bold;">I.V.A.</td>
 															<td width="100"><input type="text" name="impuesto" value="0.00" style="width:100px; text-align:right;" readOnly="true"></td>
 															<td width="25"></td>
+														
+															<td width="10"></td>
+															<td width="50"><input type="checkbox" name="chkbox_iva"></td>
+															<td width="90"></td>
 														</tr>
+
+</tr>
 														
 														<tr>
 															<td width="10" height="7"></td>
